@@ -55,7 +55,7 @@ struct _Elm_Naviframe_Item
    Evas_Coord   minh;
 
    Eina_Bool    title_visible : 1;
-   Eina_Bool    content_unfocusable : 1;
+   Eina_Bool    unfocusable : 1;
 };
 
 typedef struct _Elm_Naviframe_Content_Item_Pair Elm_Naviframe_Content_Item_Pair;
